--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/missinglink/netstatjs.git"
+    "url": "https://github.com/missinglink/netstat.js.git"
   }
 }
